# peng-cheng-mingxia-li-final-project

./: README.md  README_SUBMISSION.md
01_Paper/: final_paper.tex  final_report.md
02_Results/: dashboard.html  market_analysis.csv  raw_markets.json  summary.json
03_Project/: README.md  pyproject.toml
03_Project/data/fixtures/: sample_markets.json  sample_news.json
03_Project/src/polymarket_ai_business/: __init__.py  __main__.py  analytics.py  authoring.py  client.py  config.py  enrichment.py  models.py  news.py  pipeline.py  reporting.py
03_Project/tests/: test_pipeline.py
